maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:33: error: ':' expected but ',' found.
  def conditionSuivreMur(dir1, dir2) {
                             ^IslandMaze:42: error: identifier expected but '}' found.
} 
^